kubernetes-Manifests-file/database-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db-deployment
  namespace: prod
  labels:
    app: url-shortener
    tire: database 
spec:
  replicas: 1
  selector:
    matchLabeles:
      app: url-shortener
      tire: database
  template:
    metadata:
      labels: 
        app: url-shortener
        tire: database
    spec:
      containers:
      - name: mongo
        image: mongo:latest
        ports:
          - containerPort: 27017
        volumeMounts:
          - name: mongo-storage
            mountPath: /data/db
    volumeMounts:
      - name: mongo-storage
        persistentVolumeClaim: 
          claimName: mongo-pvc
