kubernetes-Manifests-file/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: url-shortener
spec:
  replicas: 2
  selector:
    matchLabeles:
      app: url-shortener
  template:
    metadata:
      labels: 
        app: url-shortener
    spec:
      containers:
      - name: backend
        image: #aws -ecr
        ports:
        - containerPort: 8181
      - name: frontend
        image: #aws -ecr
        ports:
        - containerPort: 80
      - name: database
        image: #aws -ecr
        ports:
        - containerPort: 27017
