kubernetes-Manifests-file/database-service.yml
apiVersion: v1
kind: Service
metadata:
  name: db-service
  namespace: prod
  labels:
    app: url-shortener
    tire: database
spec:
  type: ClusterIP
  selector:
    app: url-shortener
    tire: database
  ports:
  - protocol: TCP
    port: 27017
    targetPort: 27017
