kubernetes-Manifests-file/frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: prod
  labels:
    app: url-shortener
    tire: frontend
spec:
  type: ClusterIP
  selector:
    app: url-shortener
    tire: frontend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
