kubernetes-Manifests-file/service.yml
apiVersion: v1
kind: Service
metadata:
  name: url-shortener-service
spec:
  selector:
    app: url-shortener
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: LoadBalancer
