kubernetes-Manifests-file/ingress.yml
apiVersion: networing.k8s.io/v1
kind: Ingress
metadata:
  name: url-shortener-ingress
  namespace: prod
spec:
  rules:
  - host: domain
    http:
      paths:
      - path: /
        pathtype: Prefix
        backend: 
          service:
           name: frontend-service
           port:  
            number: 80
      - path: /api
        pathtype: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 8181
